(lang dune 3.19)

(name advent_of_ocaml)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Drew Taylor")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name advent_of_ocaml)
 (synopsis "Advent of Code 2024 in ocaml")
 (depends ocaml))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
